--- a/Ibrahim_code.ipynb
+++ b/Ibrahim_code.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "congress_url = 'https://www.congress.gov/search?searchResultViewType=expanded&q={%22congress%22:[%22115%22],%22source%22:%22legislation%22,%22search%22:%22student+debt+loan+education%22,%22chamber%22:%22Senate%22}&pageSize=250'\n"
+    "congress_url = 'https://www.congress.gov/search?searchResultViewType=expanded&q={%22congress%22:[%22115%22],%22source%22:%22legislation%22,%22search%22:%22student+debt+loan+education%22,%22chamber%22:%22Senate%22}&pageSize=250'"
    ]
   },
   {
