--- a/Ibrahim_code.ipynb
+++ b/Ibrahim_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "congress_url = 'https://www.congress.gov/search?searchResultViewType=expanded&q={%22congress%22:[%22115%22],%22source%22:%22legislation%22,%22search%22:%22student+debt+loan+education%22,%22chamber%22:%22Senate%22}&pageSize=250'"
+    "congress_url = 'https://www.congress.gov/search?searchResultViewType=expanded&q={%22congress%22:[%22115%22],%22source%22:%22legislation%22,%22search%22:%22student+debt+loan+education%22,%22chamber%22:%22Senate%22}&pageSize=250'\n",
+    "\n"
    ]
   },
   {
@@ -1240,26 +1241,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "congress_bills_on_debt_data = pd.DataFrame({\n",
-    "    'Date Introduced': date_introduced_list,\n",
-    "    'Bill number': bill_num_list,\n",
-    "    'Bill Name': bill_name_list,\n",
-    "    'Senator Details': senator_details_list,\n",
-    "    'Last Name': last_name_list,\n",
-    "    'First Name': first_name_list,\n",
+    "    'Date_Introduced': date_introduced_list,\n",
+    "    'Bill_number': bill_num_list,\n",
+    "    'Bill_Name': bill_name_list,\n",
+    "    'Senator_Details': senator_details_list,\n",
+    "    'Last_Name': last_name_list,\n",
+    "    'First_Name': first_name_list,\n",
     "    'Party': party_list,\n",
     "    'State': state_list,\n",
-    "    'Number of Cosponsors': cosponsors_list\n",
+    "    'Number_of_Cosponsors': cosponsors_list\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1283,15 +1284,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date Introduced</th>\n",
-       "      <th>Bill number</th>\n",
-       "      <th>Bill Name</th>\n",
-       "      <th>Senator Details</th>\n",
-       "      <th>Last Name</th>\n",
-       "      <th>First Name</th>\n",
+       "      <th>Date_Introduced</th>\n",
+       "      <th>Bill_number</th>\n",
+       "      <th>Bill_Name</th>\n",
+       "      <th>Senator_Details</th>\n",
+       "      <th>Last_Name</th>\n",
+       "      <th>First_Name</th>\n",
        "      <th>Party</th>\n",
        "      <th>State</th>\n",
-       "      <th>Number of Cosponsors</th>\n",
+       "      <th>Number_of_Cosponsors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1360,28 +1361,28 @@
        "</div>"
       ],
       "text/plain": [
-       "  Date Introduced Bill number  \\\n",
+       "  Date_Introduced Bill_number  \\\n",
        "0      11/29/2017      S.2169   \n",
        "1      04/07/2017       S.888   \n",
        "2      03/30/2017       S.799   \n",
        "3      11/16/2017      S.2155   \n",
        "4      06/20/2017      S.1384   \n",
        "\n",
-       "                                           Bill Name  \\\n",
+       "                                           Bill_Name  \\\n",
        "0    Student Right to Know Before You Go Act of 2017   \n",
        "1  Understanding the True Cost of College Act of ...   \n",
        "2                      Dynamic Repayment Act of 2017   \n",
        "3  Economic Growth, Regulatory Relief, and Consum...   \n",
        "4            Joint Consolidation Loan Separation Act   \n",
        "\n",
-       "               Senator Details  Last Name First Name Party State  \\\n",
+       "               Senator_Details  Last_Name First_Name Party State  \\\n",
        "0       Sen. Wyden, Ron [D-OR]     Wyden,        Ron     D    OR   \n",
        "1  Sen. Grassley, Chuck [R-IA]  Grassley,      Chuck     R    IA   \n",
        "2  Sen. Warner, Mark R. [D-VA]    Warner,       Mark     D    VA   \n",
        "3      Sen. Crapo, Mike [R-ID]     Crapo,       Mike     R    ID   \n",
        "4  Sen. Warner, Mark R. [D-VA]    Warner,       Mark     D    VA   \n",
        "\n",
-       "  Number of Cosponsors  \n",
+       "  Number_of_Cosponsors  \n",
        "0                    3  \n",
        "1                    9  \n",
        "2                    1  \n",
@@ -1389,7 +1390,7 @@
        "4                    3  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1401,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1425,15 +1426,15 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Date Introduced</th>\n",
-       "      <th>Bill number</th>\n",
-       "      <th>Bill Name</th>\n",
-       "      <th>Senator Details</th>\n",
-       "      <th>Last Name</th>\n",
-       "      <th>First Name</th>\n",
+       "      <th>Date_Introduced</th>\n",
+       "      <th>Bill_number</th>\n",
+       "      <th>Bill_Name</th>\n",
+       "      <th>Senator_Details</th>\n",
+       "      <th>Last_Name</th>\n",
+       "      <th>First_Name</th>\n",
        "      <th>Party</th>\n",
        "      <th>state_po</th>\n",
-       "      <th>Number of Cosponsors</th>\n",
+       "      <th>Number_of_Cosponsors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1502,28 +1503,28 @@
        "</div>"
       ],
       "text/plain": [
-       "  Date Introduced Bill number  \\\n",
+       "  Date_Introduced Bill_number  \\\n",
        "0      11/29/2017      S.2169   \n",
        "1      04/07/2017       S.888   \n",
        "2      03/30/2017       S.799   \n",
        "3      11/16/2017      S.2155   \n",
        "4      06/20/2017      S.1384   \n",
        "\n",
-       "                                           Bill Name  \\\n",
+       "                                           Bill_Name  \\\n",
        "0    Student Right to Know Before You Go Act of 2017   \n",
        "1  Understanding the True Cost of College Act of ...   \n",
        "2                      Dynamic Repayment Act of 2017   \n",
        "3  Economic Growth, Regulatory Relief, and Consum...   \n",
        "4            Joint Consolidation Loan Separation Act   \n",
        "\n",
-       "               Senator Details  Last Name First Name Party state_po  \\\n",
+       "               Senator_Details  Last_Name First_Name Party state_po  \\\n",
        "0       Sen. Wyden, Ron [D-OR]     Wyden,        Ron     D       OR   \n",
        "1  Sen. Grassley, Chuck [R-IA]  Grassley,      Chuck     R       IA   \n",
        "2  Sen. Warner, Mark R. [D-VA]    Warner,       Mark     D       VA   \n",
        "3      Sen. Crapo, Mike [R-ID]     Crapo,       Mike     R       ID   \n",
        "4  Sen. Warner, Mark R. [D-VA]    Warner,       Mark     D       VA   \n",
        "\n",
-       "  Number of Cosponsors  \n",
+       "  Number_of_Cosponsors  \n",
        "0                    3  \n",
        "1                    9  \n",
        "2                    1  \n",
@@ -1531,7 +1532,7 @@
        "4                    3  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1544,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
